samples/_failures_safe/1761243082_b88bfa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d103c53.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_8d103c53.c:145:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  145 |     int det
      |     ^~~
./samples/SAFE/__tmp_8d103c53.c:145:5: error: expected declaration or statement at end of input
